@@ -36,40 +36,44 @@ class LOADER():
     ## Generate a script for loading bitfiles onto an FPGA.
     ##
     def leap_xilinx_loader(xilinx_apm_name):
-      fpga_pos = moduleList.getAWBParam('physical_platform', 'FPGA_POSITION')
+      try:
+        fpga_pos = moduleList.getAWBParam('physical_platform', 'FPGA_POSITION')
+      except:
+        fpga_pos = None
 
       def leap_xilinx_loader_closure(target, source, env):
         lf = open(str(target[0]), 'w')
 
         lf.write('#!/usr/bin/perl\n')
         lf.write('\n')
-        lf.write('use Getopt::Long;\n')
-        lf.write('my $dev_id = undef;\n')
-        lf.write('GetOptions(\'device-id=i\', \$dev_id);\n')
-        lf.write('\n')
-        lf.write('# Specify specific cable if device database includes a cable ID\n')
-        lf.write('my $setCable = \'setCable -p auto\';\n')
-        lf.write('if (defined($dev_id)) {\n')
-        lf.write('  my $cable_cfg = `leap-fpga-ctrl --device-id=${dev_id} --getconfig prog_cable_id`;\n')
-        lf.write('  chomp($cable_cfg);\n')
-        lf.write('  $setCable = "setCable $cable_cfg" if ($cable_cfg ne "");\n')
-        lf.write('}\n')
-        lf.write('\n')
-        lf.write('open (BATCH,">batch.opt");\n')
-        lf.write('print BATCH "setMode -bscan\n')
-        lf.write('${setCable}\n')
-        lf.write('identify\n')
-        lf.write('assignfile -p 2 -file .xilinx/hello_hybrid_htg_par.bit\n')
-        lf.write('program -p 2\n')
-        lf.write('quit\n')
-        lf.write('EOF\n')
-        lf.write('";\n')
-        lf.write('close(BATCH);\n')
-        lf.write('open (PIPE, "impact -batch batch.opt 2>&1 | tee $ARGV[0] |");\n')
-        lf.write('while(<PIPE>) {\n')
-        lf.write('  if ($_ =~ /ERROR:iMPACT/) {exit(257);}\n')
-        lf.write('  if ($_ =~ /autodetection failed/) {exit(257);}\n')
-        lf.write('}\n')
+        if fpga_pos != None:
+          lf.write('use Getopt::Long;\n')
+          lf.write('my $dev_id = undef;\n')
+          lf.write('GetOptions(\'device-id=i\', \$dev_id);\n')
+          lf.write('\n')
+          lf.write('# Specify specific cable if device database includes a cable ID\n')
+          lf.write('my $setCable = \'setCable -p auto\';\n')
+          lf.write('if (defined($dev_id)) {\n')
+          lf.write('  my $cable_cfg = `leap-fpga-ctrl --device-id=${dev_id} --getconfig prog_cable_id`;\n')
+          lf.write('  chomp($cable_cfg);\n')
+          lf.write('  $setCable = "setCable $cable_cfg" if ($cable_cfg ne "");\n')
+          lf.write('}\n')
+          lf.write('\n')
+          lf.write('open (BATCH,">batch.opt");\n')
+          lf.write('print BATCH "setMode -bscan\n')
+          lf.write('${setCable}\n')
+          lf.write('identify\n')
+          lf.write('assignfile -p 2 -file .xilinx/hello_hybrid_htg_par.bit\n')
+          lf.write('program -p 2\n')
+          lf.write('quit\n')
+          lf.write('EOF\n')
+          lf.write('";\n')
+          lf.write('close(BATCH);\n')
+          lf.write('open (PIPE, "impact -batch batch.opt 2>&1 | tee $ARGV[0] |");\n')
+          lf.write('while(<PIPE>) {\n')
+          lf.write('  if ($_ =~ /ERROR:iMPACT/) {exit(257);}\n')
+          lf.write('  if ($_ =~ /autodetection failed/) {exit(257);}\n')
+          lf.write('}\n')
         lf.write('exit(0);\n')
 
         lf.close()
